--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 }
 
 h1 {
-    font-size:30pt;
+    font-size:60pt;
 }
 h4 {
     font-size:17pt;
@@ -20,6 +20,7 @@ h5 {
     font-size:30pt;
     text-align: center;
     margin:20px;
+    color: #ff4500;
 }
 
 body {
@@ -30,7 +31,7 @@ body {
     font-family:sans-serif; 
     font-weight:bold; 
     font-size:10pt;
-    color: #ffffff;
+    color: #ff4500;
     background-repeat: no-repeat;
     background-position: center;
     background-color: black;
@@ -41,23 +42,23 @@ body {
 
 #crystalspink img {
     display: block;
-    height: 130px;  
+    height: 50px;  
     width: 100px;
     
 }
 #crystalsblue img {
     display: block;
-    height: 130px;  
+    height: 50px;  
     width: 100px;
     }
 #crystalspurple img {
     display: block;
-    height: 130px;  
+    height: 50px;  
     width: 100px;
     }
 #crystalsyellow img {
     display: block;
-    height: 130px;  
+    height: 50px;  
     width: 100px;
     
 }
@@ -72,27 +73,38 @@ button{
 /* For the left 'Guess A Letter!' and 'Guessed Letter' boxes. */
 .col-sm-3 {
      text-align:center;
-     float:left;
+     float:center;
+     font-family: 'Righteous', cursive;
+     
  }
 
 .col-sm-9 {
-    font-family: 'Audiowide', cursive;
+    font-family: 'Righteous', cursive;
      text-align:center;
 }
 
 .col-sm-9 {
-    font-family: 'Audiowide', cursive;
+    font-family: 'Righteous', cursive;
      text-align:center;
  }
 
 .col-sm-4 {
-    font-family: 'Audiowide', cursive;
+    font-family: 'Righteous', cursive;
      text-align:center;
      padding-top: 10px;
 
 }
 .well {
-    background-color: #483d8b;
+    background-color: black; 
+    border-top-width: 5px;
+    border-bottom-width: 0px;
+    border-left-width: 0px;
+    border-right-width:0px;
+    border-color: Goldenrod;
+   color: #ff4500;
+    opacity: 0.6;
+}
+
 
 
 
