--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,12 @@ h5 {
     color: #ff4500;
 }
 
+h6 {
+    font-size:14pt;
+    text-align: center;
+    margin:20px;
+    color: #ff4500;
+}
 body {
     width: 100%;
     text-align: center;
